--- a/templates/product.html
+++ b/templates/product.html
@@ -7,11 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/Products.css">
+    <link rel="stylesheet" href="static/css/product.css">
+    
     <title>Products</title>
   </head>
   <body>
-    <div "class=container">
+    <div class="container">
     <h1 class="heading"> Products</h1>
     <div class="row mx-auto">
        {% for product in products%}
@@ -19,15 +20,15 @@
           <img src="{{product.image.url}}" class="card-img-top" alt="...">
           <div class="card-body">
           <h5 class="card-title">{{product.p_name}}</h5>
-           <p class="card-text">{{product.price}}</p>
+           <h1 class="card-text"><span>{{product.price}}</span></h1> 
            <p class="card-text">{{product.p_descp}}</p>
-           <a href="#" class="btn btn-primary">buy now</a>
+         <button class="btn-primary">buy now</button>
+        
            </div>
            </div> 
         {% endfor %}   
     </div>    
-  </div>
-    
+  </div>  
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
