--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                             <a href="#">Blog</a>
                         </li>
                         <li>
-                            <a href="#">Shop</a>
+                            <a href="#">Orders</a>
                         </li>
                         <li>
                             <a href="#">Services</a>
@@ -59,8 +59,8 @@
                 <div class="contact flex items-center">
                     <img src="static/icons/phone.svg" alt="">
                     <div>
-                        <h5>Call us: (+84) 123 456 789</h5>
-                        <h6>E-mail : support@freshmeal.com</h6>
+                        <h5>Call us: 7597392744</h5>
+                        <h6>E-mail : divyanshsharma0631@gmail.com</h6>
                     </div>
                 </div>
                 <div class="time flex items-center">
